code/typescript/RealTimeTimeSeries/v3/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Real-Time Time Series client library for JavaScript

[![API Version](https://img.shields.io/badge/api-v3.0.0-blue)](https://developer.factset.com/api-catalog/)
[![npm](https://img.shields.io/npm/v/@factset/sdk-realtimetimeseries)](https://www.npmjs.com/package/@factset/sdk-realtimetimeseries)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

Time series data, end-of-day or intraday, tick-by-tick or subsampled. Additional vendor-specific endpoints provide a modified interface
for seamless integration with the ChartIQ chart library.

This API is focused on high-performance applications that are

* serving millions of end-users,
* accessible by client browsers via the internet,
* integrated into complex infrastructures such as existing frontend frameworks or authentication services.

This API has been designed for direct use by client web applications and feature extreme low latency:
The average response time across all endpoints is 30 ms whereas 99% of all requests are answered in close to under 300ms.

See the [Real-Time Quotes API for Digital Portals](https://developer.factset.com/api-catalog/real-time-quotes-api) for access to detailed
price information.


This TypeScript/JavaScript package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 3.0.0
- SDK version: 0.12.0
- Build package: com.factset.sdk.codegen.FactSetJavascriptClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* Node.js >= 18

## Installation

### npm

```shell
npm install @factset/sdk-utils @factset/sdk-realtimetimeseries@0.12.0
```

### yarn

```shell
yarn add @factset/sdk-utils @factset/sdk-realtimetimeseries@0.12.0
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Node.js environment
   1. Install and activate Node.js >=18. If you're using [nvm](https://github.com/nvm-sh/nvm):

      ```sh
      nvm install 18
      nvm use 18
      ```

   2. (optional) [Install yarn](https://yarnpkg.com/getting-started/install).
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code


```javascript
const { ApiClient, PricesApi } = require('@factset/sdk-realtimetimeseries');
const { ConfidentialClient } = require('@factset/sdk-utils');

const apiClient = ApiClient.instance;

// Examples for each supported authentication method are below,
// choose one that satisfies your use case.

// (Preferred) OAuth 2.0: FactSetOAuth2
// See https://github.com/FactSet/enterprise-sdk#oauth-20
// for information on how to create the app-config.json file
//
// The confidential client instance should be reused in production environments.
// See https://github.com/FactSet/enterprise-sdk-utils-typescript#authentication
// for more information on using the ConfidentialClient class
apiClient.factsetOauth2Client = new ConfidentialClient('/path/to/app-config.json');

// Basic authentication: FactSetApiKey
// See https://github.com/FactSet/enterprise-sdk#api-key
// for information how to create an API key
// const FactSetApiKey = apiClient.authentications['FactSetApiKey'];
// FactSetApiKey.username = 'USERNAME-SERIAL';
// FactSetApiKey.password = 'API-KEY';

const apiInstance = new PricesApi();
const postPricesTimeSeriesEodListRequest = new realtimetimeseries.PostPricesTimeSeriesEodListRequest(); // PostPricesTimeSeriesEodListRequest | Request Body

// Call api endpoint
apiInstance.postPricesTimeSeriesEodList(postPricesTimeSeriesEodListRequest).then(
  data => {

    console.log('API called successfully. Returned data:');
    console.log(data);
  },
  error => {
    console.error(error);
  },
);

```


## Using a Proxy

To add a HTTP proxy for the API client, you can set the proxyUrl for the ApiClient instance:

```javascript
const { ApiClient } = require('@factset/sdk-realtimetimeseries');

const apiClient = ApiClient.instance;
apiClient.setProxyUrl('http://username:password@proxy.example.com:8080');
```

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/wealth/v3*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*realtimetimeseries.PricesApi* | [**postPricesTimeSeriesEodList**](docs/PricesApi.md#postPricesTimeSeriesEodList) | **POST** /prices/timeSeries/eod/list | End-of-day time series data for a notation.
*realtimetimeseries.PricesApi* | [**postPricesTimeSeriesEodSubsampleGet**](docs/PricesApi.md#postPricesTimeSeriesEodSubsampleGet) | **POST** /prices/timeSeries/eod/subsample/get | Single subsample end-of-day data for a notation.
*realtimetimeseries.PricesApi* | [**postPricesTimeSeriesEodSubsampleList**](docs/PricesApi.md#postPricesTimeSeriesEodSubsampleList) | **POST** /prices/timeSeries/eod/subsample/list | Subsampled end-of-day time series data for a notation.
*realtimetimeseries.PricesApi* | [**postPricesTimeSeriesIntradayList**](docs/PricesApi.md#postPricesTimeSeriesIntradayList) | **POST** /prices/timeSeries/intraday/list | Intraday time series data for a notation.
*realtimetimeseries.PricesApi* | [**postPricesTimeSeriesIntradaySubsampleGet**](docs/PricesApi.md#postPricesTimeSeriesIntradaySubsampleGet) | **POST** /prices/timeSeries/intraday/subsample/get | Single subsample intraday data for a notation.
*realtimetimeseries.PricesApi* | [**postPricesTimeSeriesIntradaySubsampleList**](docs/PricesApi.md#postPricesTimeSeriesIntradaySubsampleList) | **POST** /prices/timeSeries/intraday/subsample/list | Subsampled intraday time series data for a notation.
*realtimetimeseries.VendorApi* | [**postVendorChartIQTimeSeriesEodList**](docs/VendorApi.md#postVendorChartIQTimeSeriesEodList) | **POST** /vendor/chartIQ/timeSeries/eod/list | End-of-day time series data for a notation.
*realtimetimeseries.VendorApi* | [**postVendorChartIQTimeSeriesEodSubsampleGet**](docs/VendorApi.md#postVendorChartIQTimeSeriesEodSubsampleGet) | **POST** /vendor/chartIQ/timeSeries/eod/subsample/get | Single subsample end-of-day data for a notation.
*realtimetimeseries.VendorApi* | [**postVendorChartIQTimeSeriesEodSubsampleList**](docs/VendorApi.md#postVendorChartIQTimeSeriesEodSubsampleList) | **POST** /vendor/chartIQ/timeSeries/eod/subsample/list | Subsampled end-of-day time series data for a notation.
*realtimetimeseries.VendorApi* | [**postVendorChartIQTimeSeriesIntradaySubsampleGet**](docs/VendorApi.md#postVendorChartIQTimeSeriesIntradaySubsampleGet) | **POST** /vendor/chartIQ/timeSeries/intraday/subsample/get | Single subsample intraday data for a notation.
*realtimetimeseries.VendorApi* | [**postVendorChartIQTimeSeriesIntradaySubsampleList**](docs/VendorApi.md#postVendorChartIQTimeSeriesIntradaySubsampleList) | **POST** /vendor/chartIQ/timeSeries/intraday/subsample/list | Subsampled intraday time series data for a notation.


## Documentation for Models

 - [realtimetimeseries.CursorBasedPaginationOutputObject](docs/CursorBasedPaginationOutputObject.md)
 - [realtimetimeseries.CursorBasedPaginationOutputObjectWithoutTotal](docs/CursorBasedPaginationOutputObjectWithoutTotal.md)
 - [realtimetimeseries.ErrorMetaObject](docs/ErrorMetaObject.md)
 - [realtimetimeseries.InlineResponse200](docs/InlineResponse200.md)
 - [realtimetimeseries.InlineResponse2001](docs/InlineResponse2001.md)
 - [realtimetimeseries.InlineResponse20010](docs/InlineResponse20010.md)
 - [realtimetimeseries.InlineResponse20010Data](docs/InlineResponse20010Data.md)
 - [realtimetimeseries.InlineResponse20010DataSubsamples](docs/InlineResponse20010DataSubsamples.md)
 - [realtimetimeseries.InlineResponse2001Data](docs/InlineResponse2001Data.md)
 - [realtimetimeseries.InlineResponse2001Meta](docs/InlineResponse2001Meta.md)
 - [realtimetimeseries.InlineResponse2002](docs/InlineResponse2002.md)
 - [realtimetimeseries.InlineResponse2002Data](docs/InlineResponse2002Data.md)
 - [realtimetimeseries.InlineResponse2003](docs/InlineResponse2003.md)
 - [realtimetimeseries.InlineResponse2003Data](docs/InlineResponse2003Data.md)
 - [realtimetimeseries.InlineResponse2004](docs/InlineResponse2004.md)
 - [realtimetimeseries.InlineResponse2004Data](docs/InlineResponse2004Data.md)
 - [realtimetimeseries.InlineResponse2004DataRange](docs/InlineResponse2004DataRange.md)
 - [realtimetimeseries.InlineResponse2005](docs/InlineResponse2005.md)
 - [realtimetimeseries.InlineResponse2005Data](docs/InlineResponse2005Data.md)
 - [realtimetimeseries.InlineResponse2005DataPrices](docs/InlineResponse2005DataPrices.md)
 - [realtimetimeseries.InlineResponse2006](docs/InlineResponse2006.md)
 - [realtimetimeseries.InlineResponse2006Data](docs/InlineResponse2006Data.md)
 - [realtimetimeseries.InlineResponse2006DataSubsample](docs/InlineResponse2006DataSubsample.md)
 - [realtimetimeseries.InlineResponse2007](docs/InlineResponse2007.md)
 - [realtimetimeseries.InlineResponse2007Data](docs/InlineResponse2007Data.md)
 - [realtimetimeseries.InlineResponse2007DataSubsamples](docs/InlineResponse2007DataSubsamples.md)
 - [realtimetimeseries.InlineResponse2008](docs/InlineResponse2008.md)
 - [realtimetimeseries.InlineResponse2008Data](docs/InlineResponse2008Data.md)
 - [realtimetimeseries.InlineResponse2008DataPrices](docs/InlineResponse2008DataPrices.md)
 - [realtimetimeseries.InlineResponse2009](docs/InlineResponse2009.md)
 - [realtimetimeseries.InlineResponse2009Data](docs/InlineResponse2009Data.md)
 - [realtimetimeseries.InlineResponse2009DataSubsample](docs/InlineResponse2009DataSubsample.md)
 - [realtimetimeseries.InlineResponse200Data](docs/InlineResponse200Data.md)
 - [realtimetimeseries.InlineResponse200DataRange](docs/InlineResponse200DataRange.md)
 - [realtimetimeseries.InlineResponse200Meta](docs/InlineResponse200Meta.md)
 - [realtimetimeseries.OffsetBasedPaginationOutputObject](docs/OffsetBasedPaginationOutputObject.md)
 - [realtimetimeseries.OffsetBasedPaginationOutputObjectWithoutTotal](docs/OffsetBasedPaginationOutputObjectWithoutTotal.md)
 - [realtimetimeseries.PartialOutputObject](docs/PartialOutputObject.md)
 - [realtimetimeseries.PostPricesTimeSeriesEodListRequest](docs/PostPricesTimeSeriesEodListRequest.md)
 - [realtimetimeseries.PostPricesTimeSeriesEodSubsampleGetRequest](docs/PostPricesTimeSeriesEodSubsampleGetRequest.md)
 - [realtimetimeseries.PostPricesTimeSeriesEodSubsampleGetRequestData](docs/PostPricesTimeSeriesEodSubsampleGetRequestData.md)
 - [realtimetimeseries.PostPricesTimeSeriesEodSubsampleGetRequestDataInterval](docs/PostPricesTimeSeriesEodSubsampleGetRequestDataInterval.md)
 - [realtimetimeseries.PostPricesTimeSeriesEodSubsampleListRequest](docs/PostPricesTimeSeriesEodSubsampleListRequest.md)
 - [realtimetimeseries.PostPricesTimeSeriesIntradayListRequest](docs/PostPricesTimeSeriesIntradayListRequest.md)
 - [realtimetimeseries.PostPricesTimeSeriesIntradayListRequestData](docs/PostPricesTimeSeriesIntradayListRequestData.md)
 - [realtimetimeseries.PostPricesTimeSeriesIntradayListRequestDataRange](docs/PostPricesTimeSeriesIntradayListRequestDataRange.md)
 - [realtimetimeseries.PostPricesTimeSeriesIntradayListRequestMeta](docs/PostPricesTimeSeriesIntradayListRequestMeta.md)
 - [realtimetimeseries.PostPricesTimeSeriesIntradayListRequestMetaPagination](docs/PostPricesTimeSeriesIntradayListRequestMetaPagination.md)
 - [realtimetimeseries.PostPricesTimeSeriesIntradaySubsampleGetRequest](docs/PostPricesTimeSeriesIntradaySubsampleGetRequest.md)
 - [realtimetimeseries.PostPricesTimeSeriesIntradaySubsampleListRequest](docs/PostPricesTimeSeriesIntradaySubsampleListRequest.md)
 - [realtimetimeseries.PostVendorChartIQTimeSeriesEodListRequest](docs/PostVendorChartIQTimeSeriesEodListRequest.md)
 - [realtimetimeseries.PostVendorChartIQTimeSeriesEodListRequestData](docs/PostVendorChartIQTimeSeriesEodListRequestData.md)
 - [realtimetimeseries.PostVendorChartIQTimeSeriesEodListRequestDataAdjustments](docs/PostVendorChartIQTimeSeriesEodListRequestDataAdjustments.md)
 - [realtimetimeseries.PostVendorChartIQTimeSeriesEodListRequestDataIdentifier](docs/PostVendorChartIQTimeSeriesEodListRequestDataIdentifier.md)
 - [realtimetimeseries.PostVendorChartIQTimeSeriesEodListRequestDataRange](docs/PostVendorChartIQTimeSeriesEodListRequestDataRange.md)
 - [realtimetimeseries.PostVendorChartIQTimeSeriesEodListRequestMeta](docs/PostVendorChartIQTimeSeriesEodListRequestMeta.md)
 - [realtimetimeseries.PostVendorChartIQTimeSeriesEodListRequestMetaPagination](docs/PostVendorChartIQTimeSeriesEodListRequestMetaPagination.md)
 - [realtimetimeseries.PostVendorChartIQTimeSeriesEodSubsampleGetRequest](docs/PostVendorChartIQTimeSeriesEodSubsampleGetRequest.md)
 - [realtimetimeseries.PostVendorChartIQTimeSeriesEodSubsampleGetRequestData](docs/PostVendorChartIQTimeSeriesEodSubsampleGetRequestData.md)
 - [realtimetimeseries.PostVendorChartIQTimeSeriesEodSubsampleGetRequestDataInterval](docs/PostVendorChartIQTimeSeriesEodSubsampleGetRequestDataInterval.md)
 - [realtimetimeseries.PostVendorChartIQTimeSeriesEodSubsampleGetRequestMeta](docs/PostVendorChartIQTimeSeriesEodSubsampleGetRequestMeta.md)
 - [realtimetimeseries.PostVendorChartIQTimeSeriesEodSubsampleListRequest](docs/PostVendorChartIQTimeSeriesEodSubsampleListRequest.md)
 - [realtimetimeseries.PostVendorChartIQTimeSeriesEodSubsampleListRequestData](docs/PostVendorChartIQTimeSeriesEodSubsampleListRequestData.md)
 - [realtimetimeseries.PostVendorChartIQTimeSeriesEodSubsampleListRequestDataIntervalSelection](docs/PostVendorChartIQTimeSeriesEodSubsampleListRequestDataIntervalSelection.md)
 - [realtimetimeseries.PostVendorChartIQTimeSeriesEodSubsampleListRequestDataIntervalSelectionSamples](docs/PostVendorChartIQTimeSeriesEodSubsampleListRequestDataIntervalSelectionSamples.md)
 - [realtimetimeseries.PostVendorChartIQTimeSeriesIntradaySubsampleGetRequest](docs/PostVendorChartIQTimeSeriesIntradaySubsampleGetRequest.md)
 - [realtimetimeseries.PostVendorChartIQTimeSeriesIntradaySubsampleGetRequestData](docs/PostVendorChartIQTimeSeriesIntradaySubsampleGetRequestData.md)
 - [realtimetimeseries.PostVendorChartIQTimeSeriesIntradaySubsampleGetRequestDataAdjustments](docs/PostVendorChartIQTimeSeriesIntradaySubsampleGetRequestDataAdjustments.md)
 - [realtimetimeseries.PostVendorChartIQTimeSeriesIntradaySubsampleListRequest](docs/PostVendorChartIQTimeSeriesIntradaySubsampleListRequest.md)
 - [realtimetimeseries.PostVendorChartIQTimeSeriesIntradaySubsampleListRequestData](docs/PostVendorChartIQTimeSeriesIntradaySubsampleListRequestData.md)
 - [realtimetimeseries.PostVendorChartIQTimeSeriesIntradaySubsampleListRequestDataRange](docs/PostVendorChartIQTimeSeriesIntradaySubsampleListRequestDataRange.md)
 - [realtimetimeseries.StatusObject](docs/StatusObject.md)


## Documentation for Authorization



### FactSetApiKey

- **Type**: HTTP basic authentication



### FactSetOAuth2


- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


# Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

# Copyright

Copyright 2022 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
